fix: kafka-admin-client/pom.xml to reduce vulnerabilities (#278)
The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JAVA-ORGXERIALSNAPPY-5710960
- https://snyk.io/vuln/SNYK-JAVA-ORGXERIALSNAPPY-5918282
- https://snyk.io/vuln/SNYK-JAVA-ORGXERIALSNAPPY-5710959
- https://snyk.io/vuln/SNYK-JAVA-ORGXERIALSNAPPY-5710961
- https://snyk.io/vuln/SNYK-JAVA-ORGAPACHEKAFKA-3317161
- https://snyk.io/vuln/SNYK-JAVA-ORGAPACHEKAFKA-1540737

Signed-off-by: rajapandi.m <rajapandi.m@technoforte.co.in>
Co-authored-by: snyk-bot <snyk-bot@snyk.io>

--- a/kafka-admin-client/pom.xml
+++ b/kafka-admin-client/pom.xml
@@ -38,7 +38,7 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
-		<apache.kafka.version>2.8.0</apache.kafka.version>
+		<apache.kafka.version>3.5.2</apache.kafka.version>
 		<junit.version>4.13.2</junit.version>
 		<mockito.version>3.11.2</mockito.version>
 		<powermock.version>2.0.9</powermock.version>
@@ -230,8 +230,7 @@
 							<target>
 								<!-- Create a shell script to run the JAR file
 								with executable permission -->
-								<chmod file="${project.build.directory}/*.jar"
-									perm="ugo+rx" />
+								<chmod file="${project.build.directory}/*.jar" perm="ugo+rx"/>
 							</target>
 						</configuration>
 					</execution>
